2009-05-06 Alejandro Pinheiro <apinheiro@igalia.com>

	* examples/hildon-remote-texture-example.c

	Change the include to the hildon-remote-texture in order to compile
	properly the examples on the installed libhildon1-examples package

2009-05-05  Claudio Saavedra  <csaavedra@igalia.com>

	* tests/Makefile.am: Add check for HildonPickerButton.
	* tests/check-hildon-picker-button.c (fx_setup), (fx_teardown),
	(START_TEST), (create_hildon_picker_button_suite): Add three simple
	checks for the HildonPickerButton.
	* tests/check_test.c (configure_tests): Add the test suite.
	* tests/test_suites.h: likewise.

2009-05-05  Claudio Saavedra  <csaavedra@igalia.com>

	* hildon/hildon-touch-selector.c
	(+on_row_changed): Emit HildonTouchSelector:changed when the
	contents of a selected row change.
	(_create_new_column), (_hildon_touch_selector_set_model): connect
	to GtkTreeModel:row-changed on a newly set model.

	Fixes: NB#114253 (HildonPickerButton not refreshing its value)

2009-05-05  Alberto Garcia  <agarcia@igalia.com>

	Based on a patch by Mox Soini (ext-mox.soini@nokia.com)

	* hildon/hildon-banner.c (hildon_banner_destroy)
	(hildon_banner_show_progress, hildon_banner_set_fraction):
	Remove the progress bar from HildonBanner and use a progress
	indicator instead.

	Fixes: NB#113761 (Update progress banner to use progress
	indicator)

2009-05-04  Alberto Garcia  <agarcia@igalia.com>

	* hildon/hildon-banner.c:
	Calculate size of the banner label using the actual screen width
	rather than using a fixed value.

	Fixes: NB#114395 ('Disconnect charger...' info banner in portrait
	is truncated)

2009-05-04  Alejandro G. Castro  <alex@igalia.com>

	* hildon/hildon-pannable-area.c,
	(hildon_pannable_area_class_init): Fixed signals documentation
	typo.

2009-05-04  Claudio Saavedra  <csaavedra@igalia.com>

	* configure.ac: post release version bump
	* debian/changelog: post release version bump

2009-05-04  Claudio Saavedra  <csaavedra@igalia.com>

	[Release 2.1.70]
